/**
 */
package cr2;


/**
 * <!-- begin-user-doc -->
 * A representation of the model object '<em><b>End</b></em>'.
 * <!-- end-user-doc -->
 *
 *
 * @see cr2.Cr2Package#getEnd()
 * @model annotation="gmf.node label='name'"
 * @generated
 */
public interface End extends Step {
} // End
