/**
 */
package cr2;


/**
 * <!-- begin-user-doc -->
 * A representation of the model object '<em><b>Manual</b></em>'.
 * <!-- end-user-doc -->
 *
 *
 * @see cr2.Cr2Package#getManual()
 * @model annotation="gmf.node label='name'"
 * @generated
 */
public interface Manual extends ValidationStep {
} // Manual
